# fjson-fmt

./: .gitignore  .release-it.json  CHANGELOG.md  LICENSE  README.md  example.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-to-pages.yml
crate/: Cargo.toml  UPSTREAM-LICENSE
crate/src/: buffer.rs  convert.rs  error.rs  formatter.rs  lib.rs  model.rs  options.rs  parser.rs  table_template.rs  tokenizer.rs
crate/tests/: always_expand_formatting.rs  comment_formatting.rs  east_asian_wide_characters.rs  ending_comma_formatting.rs  helpers.rs  jsonl.rs  length_and_complexity.rs  number_formatting.rs  object_serialization.rs  pad_formatting.rs  property_alignment.rs  table_formatting.rs  top_level_items.rs  universal.rs
docs/: app.js  index.html  styles.css
docs/pkg/: fjson_fmt_engine.d.ts  fjson_fmt_engine_bg.wasm  fjson_fmt_engine_bg.wasm.d.ts  package.json
lib/: cli.mjs  config.mjs  engine.mjs  index.d.ts  index.node.mjs  index.web.mjs
pkg/: fjson_fmt_engine.d.ts  fjson_fmt_engine.js  fjson_fmt_engine_bg.wasm  package.json
pkg-web/: fjson_fmt_engine.js
test/: engine.test.mjs  library.test.mjs
