[package]
name = "fjson-fmt-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings around a vendored FracturedJson formatter engine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
