[package]
name = "fjson-fmt-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings around a vendored FracturedJson formatter engine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
# The vendored `src/*.rs` modules carry upstream doctests that import the
# original `fracturedjson` crate name; they aren't relevant to this fork and
# would fail to compile. The behaviour they document is covered by the
# integration suite in `tests/`.
doctest = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
unicode-width = "0.1"

[profile.release]
opt-level = "s"
lto = true
